Finished lead melody

--- a/main.tex
+++ b/main.tex
@@ -265,15 +265,19 @@ The second command we're going to try is the \nb{O} command. This can cause the 
 
 \begin{enumerate}[resume]
 	
-\item  On rows 1, 5, 9 and D in your phrase, assign the O command to L On rows 3, 7, B and F in your phrase, assign the O command to R
+\item  On rows \nb{1}, \nb{5}, \nb{9} and \nb{D} in your phrase, assign the \nb{O} command to \nb{L}. On rows \nb{3}, \nb{7}, \nb{B} and \nb{F} in your phrase, assign the \nb{O} command to \nb{R}.
 
-\item Play your melody and you will hear that after each note, the channel is panned to either left or right. In this example we have panned the melody in the spaces between the notes – I tend to find this gives a better stereo effect than placing the pan on the rows where each note is. Also this gives you room to place commands (the chord command we used for instance) on the rows with the notes themselves.
+\item Play your melody and you will hear that after each note, the channel is panned to either left or right. In this example we have panned the melody in the spaces between the notes---I tend to find this gives a better stereo effect than placing the pan on the rows where each note is. Also this gives you room to place commands (the chord command we used for instance) on the rows with the notes themselves.
+
+\end{enumerate}
 
 That's it for the lead melody for now, try experimenting with different commands and their parameters to try and make it sound even more interesting!
 
-Navigate from the phrase screen back to the chain screen and enter your phrase in the top 4 rows. If you want to change your lead melody even more, remember the cloning feature and use this to create new phrases.
+\begin{enumerate}[resume]
+	
+\item Navigate from the phrase screen back to the chain screen and enter your phrase in the top 4 rows. If you want to change your lead melody even more, remember the cloning feature and use this to create new phrases.
 
-When you're done head back to the song screen and press start. The song screen will now play both your chains (bass \& lead melody) together for the first time. The 4 phrases in your bassline and the 4 phrases in your lead melody will play alongside each other and then loop back to the first phrase in each. If something sounds out of tune, go into the phrase where you think the problem is and alter it until it sounds right to you.
+\item When you're done head back to the song screen and press \bStart. The song screen will now play both your chains (bass \& lead melody) together for the first time. The 4 phrases in your bassline and the 4 phrases in your lead melody will play alongside each other and then loop back to the first phrase in each. If something sounds out of tune, go into the phrase where you think the problem is and alter it until it sounds right to you.
 
 \end{enumerate}
 
