--- a/main.tex
+++ b/main.tex
@@ -312,17 +312,22 @@ Please note that this isn't the definitive method of creating a kick drum using 
 
 \section{Percussion (Snare Drum + Hihats)}
 
-Create a new chain in the Noise channel (NOI). If you've been following up to now it should be chain 03. If not don't worry. Just double tap A to create a virgin chain.
+\begin{enumerate}
 
-Go into your new chain and create a new phrase, go into this phrase and place notes (the default is fine, don't worry about that now) on rows 4 and C. This is going to be your snare drum so make sure these notes are assigned to a new instrument number, then go into the instrument screen for it.
 
-In the instrument screen, we need to make sure that we are using a Noise instrument, so make sure that is selected instead of Pulse, Wave or Kit.
+\item Create a new chain in the Noise channel (\nb{NOI}). If you've been following up to now it should be chain \nb{03}. If not don't worry. Just double tap \bA to create a virgin chain.
 
-Once you've done this name the instrument SNARE. Press play to hear what you're altering whilst you edit the envelope to around C3, change the length to something that sounds snappy, and finally edit the sweep until the notes playing start to resemble a snare sound. EF usually works fine so try that.
+\item Go into your new chain and create a new phrase, go into this phrase and place notes (the default is fine, don't worry about that now) on rows \nb{4} and \nb{C}. This is going to be your \textit{snare} drum so make sure these notes are assigned to a new instrument number, then go into the instrument screen for it.
 
-Go back to your phrase screen, create a new instrument, add these notes before and after each of the snares and experiment inside the instrument screen remember to name this instrument HAT, and then make these as long or short as you want. A1 or A2 is usually a good envelope setting, and to be honest you won't really need to alter the length or sweep parameters but again, it's up to you, experimentation is the key!
+\item In the instrument screen, we need to make sure that we are using a Noise instrument, so make sure that is selected instead of Pulse, Wave or Kit.
 
-Try changing a few of the phrases in this chain and adding new percussion patterns. Once you've got it sounding how you want navigate back to the song screen and hit start to hear your kick drum, bassline, lead melody, snare and hi-hat all working in perfect harmony.
+\item Once you've done this name the instrument \nb{SNARE}. Press play to hear what you're altering whilst you edit the envelope to around \nb{C3}, change the length to something that sounds snappy, and finally edit the sweep until the notes playing start to resemble a snare sound. \nb{EF} usually works fine so try that.
+
+\item Go back to your phrase screen, create a new instrument, add these notes before and after each of the snares and experiment inside the instrument screen remember to name this instrument \nb{HAT}, and then make these as long or short as you want. \nb{A1} or \nb{A2} is usually a good envelope setting, and to be honest you won't really need to alter the length or sweep parameters but again, it's up to you, experimentation is the key!
+
+\item Try changing a few of the phrases in this chain and adding new percussion patterns. Once you've got it sounding how you want navigate back to the song screen and hit \bStart to hear your kick drum, bassline, lead melody, snare and hi-hat all working in perfect harmony.
+
+\end{enumerate}
 
 By now, you should have enough basic knowledge and understanding to create chains, phrases and instruments in \lsdj and use these to construct a simple song. Again, remember to read the \lsdj manual and check the \lsdj wiki/mailing list for advanced techniques and for anything at all you're not sure of.
 
