Changing date text

--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@
 %opening
 \title{\lsdj Tutorial}
 \author{Sabrepulse}
-\date{Original text: 2009? \\ Edit (Erwan): \today}
+\date{Original text: 2009? \\ Formatted on: \today}
 
 
 \begin{document}
