Remove \note command and replace by \nb

--- a/lsdj-tutorial.tex
+++ b/lsdj-tutorial.tex
@@ -25,9 +25,9 @@
 \newcommand{\bUp}{\buttonStyle{up}}
 \newcommand{\bDown}{\buttonStyle{down}}
 
-\newcommand{\note}[1]{\textbf{#1}\xspace}
 \newcommand{\nb}[1]{\texttt{#1}\xspace}
 \newcommand{\lsdj}{\textit{LSDJ}\xspace}
+
 \DefineVerbatimEnvironment%
 {notes}{Verbatim}
 {frame=lines}
@@ -157,7 +157,7 @@ Now in chain \nb{01} you should see 4 different phrase numbers. If you look in t
 
 \item 
 Ok the next step is to edit the notes in each new phrase to round off our bassline.
-The first one contains all \note{C} notes. Make the second one contain \note{E} notes, make the third contain \note{A} notes and the fourth to contain \note{B} notes. For the sake of this tutorial we'll keep it as simple as possible.
+The first one contains all \nb{C} notes. Make the second one contain \nb{E} notes, make the third contain \nb{A} notes and the fourth to contain \nb{B} notes. For the sake of this tutorial we'll keep it as simple as possible.
 
 \item Go back to the chain screen and press \bStart. You will see each of your phrases playing in progression, with a small black arrow pointing to which phrase is currently playing. This will loop until you press start again.
 
